tests/assets/test_suites/w3c_wsdl20/documents/good/WSAddressing-1G/wsaTestService2.wsdl
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/WSAddressing-1G/wsaTestService2.wsdl -->
<!-- Copyright © 2007-07-07 01:12 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl" xmlns:tns="http://example.org/wsaTestService2"
   xmlns:wsam="http://www.w3.org/2007/05/addressing/metadata"
   xmlns:wsp="http://www.w3.org/ns/ws-policy" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
   xmlns:s0="http://example.org/notify" xmlns:s1="http://example.org/echo"
   targetNamespace="http://example.org/wsaTestService2">
   <!--

      Documentation at:
      http://esw.w3.org/topic/WsdlConverter

      To report problems, please refer to:
      http://esw.w3.org/topic/WsdlConverterFeedback

      Generated by the WSDL converter version:
      2006-02-20
      
      Manually cleansed by Jonathan Marsh 2007-06-29

   -->
   <types>
      <xsd:schema targetNamespace="http://example.org/notify" elementFormDefault="qualified"
         attributeFormDefault="unqualified">
         <xsd:element name="notify" type="xsd:string"/>
      </xsd:schema>
      <xsd:schema targetNamespace="http://example.org/echo" elementFormDefault="qualified"
         attributeFormDefault="unqualified">
         <xsd:element name="echoIn" type="xsd:string"/>
         <xsd:element name="echoOut" type="xsd:string"/>
         <xsd:element name="echoFault" type="xsd:string"/>
      </xsd:schema>
   </types>
   <interface name="wsaTestInterface">
      <fault name="echoFaultName" element="s1:echoFault"/>
      <operation name="echo" pattern="http://www.w3.org/ns/wsdl/in-out">
         <input element="s1:echoIn"/>
         <output element="s1:echoOut"/>
         <outfault ref="tns:echoFaultName"/>
      </operation>
      <operation name="notify" pattern="http://www.w3.org/ns/wsdl/in-only">
         <input element="s0:notify"/>
      </operation>
   </interface>
   <interface name="wsaTestInterfaceExplicitAction">
      <fault name="echoFaultName" element="s1:echoFault"/>
      <operation name="echo" pattern="http://www.w3.org/ns/wsdl/in-out">
         <input element="s1:echoIn" wsam:Action="http://example.org/action/echoIn"/>
         <output element="s1:echoOut" wsam:Action="http://example.org/action/echoOut"/>
         <outfault ref="tns:echoFaultName" wsam:Action="http://example.org/action/echoFault"/>
      </operation>
      <operation name="notify" pattern="http://www.w3.org/ns/wsdl/in-only">
         <input element="s0:notify" wsam:Action="http://example.org/action/notify"/>
      </operation>
   </interface>
   <binding xmlns:wsoap="http://www.w3.org/ns/wsdl/soap" name="wsaTestInterfaceBinding"
      interface="tns:wsaTestInterface" type="http://www.w3.org/ns/wsdl/soap" wsoap:version="1.1"
      wsoap:protocol="http://www.w3.org/2006/01/soap11/bindings/HTTP/">
      <wsp:Policy>
         <wsam:Addressing>
            <wsp:Policy/>
         </wsam:Addressing>
      </wsp:Policy>
      <fault ref="tns:echoFaultName"/>
      <operation ref="tns:echo"/>
      <operation ref="tns:notify"/>
   </binding>
   <binding xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
      name="wsaTestInterfaceBindingExplicitAction" interface="tns:wsaTestInterfaceExplicitAction"
      type="http://www.w3.org/ns/wsdl/soap" wsoap:version="1.1"
      wsoap:protocol="http://www.w3.org/2006/01/soap11/bindings/HTTP/">
      <wsp:Policy>
         <wsam:Addressing>
            <wsp:Policy/>
         </wsam:Addressing>
      </wsp:Policy>
      <fault ref="tns:echoFaultName"/>
      <operation ref="tns:echo"/>
      <operation ref="tns:notify"/>
   </binding>
   <service name="wsaTestService2" interface="tns:wsaTestInterface">
      <endpoint name="wsaTestInterfacePortAddressingRequired" binding="tns:wsaTestInterfaceBinding"
         address="http://example.com/wsaTestInterfacePortAddressingRequired"/>
      <endpoint name="wsaTestInterfacePortExplicitActionAddressingRequired"
         binding="tns:wsaTestInterfaceBindingExplicitAction"
         address="http://example.com/wsaTestInterfacePortExplicitAction"/>
   </service>
</description>
